--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</style>
 </head>
 <body>
-	<p><img src="images/img01.jpg" alt=""></p>
-	<p><img src="images/img02.jpg" alt=""></p>
+	<p><img src="img01.jpg" alt=""></p>
+	<p><img src="img02.jpg" alt=""></p>
 </body>
 </html>
