--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes, target-densitydpi=medium-dpi">
 	<meta name="author" content="" />
 	<meta name="keywords" content="멜론,메론,수신멜론,홈런스타,백설멜론,참외,채원,직거래,과일" />
-	<meta name="description" content="" />
+	<meta name="description" content="매년 재구매율 높은 곳! 수신멜론 채원농장" />
 	<style type="text/css">
 		* {margin:0;padding:0;text-align:center;}
 		.head {display:none;}
