--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>채원농장</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes, target-densitydpi=medium-dpi">
 	<meta name="author" content="" />
-	<meta name="keywords" content="멜론,메론,수신멜론,홈런스타,백설멜론,참외,채원,직거래,과일" />
+	<meta name="keywords" content="멜론,메론,수신멜론,홈런스타,백설멜론,참외,채원,직거래,과일,천안수신메론,수신메론,천안메론,백설메론,천안멜론,수신 멜론 (천안),하늘그린,수신하늘그린메론,하늘농장,그린멜론,그린메론,메론농장,효자멜론농장,효자농장,한나네멜론,수신하늘그린메론,메론택배,멜론택배,하늘농원,삼호네,삼호네멜론,삼호네메론,메론주문,수박" />
 	<meta name="description" content="매년 재구매율 높은 곳! 수신멜론 채원농장" />
 	<style type="text/css">
 		* {margin:0;padding:0;text-align:center;}
