--- a/test2.html
+++ b/test2.html
@@ -1,1 +1,147 @@
-eldestbro.github.io/chaewon/test2.html
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<base href="certtest.benecafe.co.kr" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1.0, user-scalable=no" />
+<meta name="format-detection" content="telephone=no" />
+<meta name="og:title" content="복리후생관 - e제너두" />
+<meta name="og:description" content="복리후생관 - e제너두" />
+<link rel="icon" href="/static/mobile/images/favicon.ico">
+<link href="/static/mobile/css/common.css" rel="stylesheet">
+<style type="text/css">
+	@charset "utf-8";
+	/* CSS Document */
+	
+		/* 버튼 */
+		.btnS2{ border: 1px solid #FAAC58; background: #FAAC58 }
+		.btnS3{border: 1px solid #FAAC58; color: #FAAC58 }
+		.btnS4_3{border: 1px solid #FAAC58; color: #FAAC58 }
+		.btnS4_4{border: 1px solid #FAAC58; color: #FAAC58 }
+	
+		/* GNB */
+		.menu_hori ul li.active {
+			background: #F6E3CE
+		}
+		.menu_hori {
+			border-bottom: 2px solid #F6E3CE
+		}
+	
+		/* 탭 */
+		.ui-tabs .ui-tabs-nav li.ui-tabs-active {
+			border: 1px solid #A9A9F5
+		}
+		.introduce .tab li.active a {background-color:#A9A9F5; border:1px solid #A9A9F5 }
+	</style>
+<script>
+var appId = '';
+</script>
+<script src="/static/mobile/js/lib/jquery.min.js"></script>
+<script src="/static/both/js/module/etbs.component.js"></script>
+<script src="/static/mobile/js/module/etbs.parent.common.js"></script>
+<script src="/static/mobile/js/module/common_pb_parent.js"></script>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-99893681-1', 'auto');
+ga('send', 'pageview');
+</script><script src="/static/mobile/js/lib/jquery-ui.js"></script>
+<script src="/static/mobile/js/lib/fonts/webfont.js"></script>
+<script src="/static/mobile/js/lib/swiper/index.js"></script>
+<script src="/static/mobile/js/lib/sly/plugins.js"></script>
+<script src="/static/mobile/js/lib/sly/sly.min.js"></script>
+<script src="/static/mobile/js/lib/sly/horizontal.js"></script>
+<script src="/static/mobile/js/lib/slick/slick.js"></script>
+<script src="/static/mobile/js/lib/form.js"></script>
+<title>이제너두</title>
+<style>
+	/* .iframe{width: 100%; height: 100%; position: fixed;}
+	.iframe iframe{width: 100%; height: 100% } */
+	.iframe_wrap {width: 100%; max-height: 100%; max-height: 100vh; position: relative;}
+	.iframe_wrap .iframe{width: 100%; height: 100%; height:100vh; position: absolute; top:0; left:0; overflow:scroll;-webkit-overflow-scrolling: touch;}
+	.iframe_wrap .iframe iframe{width: 100%; height: 100%;}
+</style>
+</head>
+<body>
+<div class="iframe_wrap">
+	<div class="iframe">
+		<iframe src="/main/mainChild" id="main_frame" frameborder="0" onload="childOnloadHandler(this.contentWindow)"></iframe>
+	</div>
+</div>
+<script>
+/* $(document).ready(function() {
+	var cWidth = document.documentElement.clientWidth;
+	var cHeight = document.documentElement.clientHeight;
+	
+	$(".iframe").css({"width":cWidth, "height":cHeight});
+	$(".iframe iframe").css({"width":cWidth, "height":cHeight});
+}); */
+var child = window.frames[0];
+if(child){
+	var locationTo = etbs.param.getParam('lc');
+	if (locationTo == 'prod') {
+		child.location.href = '/product/product?prodNo=' + etbs.param.getParam('prodNo');
+	}else if(locationTo){
+		child.location.href = etbs.param.getParam('lc');
+	}
+	// TODO delete this test code
+	var childPage = sessionStorage && sessionStorage.getItem('childPage');
+	if(childPage && child.location.href != childPage){
+		child.location.href = childPage;
+	}
+}
+function childOnloadHandler(childWindow){
+	try {
+		console.debug('child-location:', childWindow.location.href); // TODO 삭제: test code
+	} catch (e) {
+		console.warn('cross origin. cannot access child location');
+	}
+//		if(childWindow.location.host.indexOf('benecafe') > 1){
+//			$('#wrap').removeClass('partner');
+//		}else{
+//			$('#wrap').addClass('partner');
+//		}
+}
+function hold(){ // TODO delete this test code
+	console.warn('이 함수는 사이트오픈 때 삭제될 예정입니다. 소스에서 호출하는 경우가 없도록 주의하세요.');
+	sessionStorage.setItem('childPage', child.location.href);
+}
+function release(){ // TODO delete this test code
+	console.warn('이 함수는 사이트오픈 때 삭제될 예정입니다. 소스에서 호출하는 경우가 없도록 주의하세요.');
+	sessionStorage.removeItem('childPage');
+}
+function searchPopOpen(popTarget){
+	openPop('.pop_good_srch');
+}
+//바로가기 
+function quickView(url){
+	child.location.href = url;
+}
+</script>
+<div class="actionBar">
+	<ul class="bottomMenuArea">
+		<li><a href="/" class="btnHome">홈</a></li>
+		<li><a onClick="searchPopOpen('.pop_good_srch')" class="btnSearch">상품찾기</a></li>
+		<li><a onClick="quickView('/board/cmpyHappyMain');" class="btnCs">고객센터</a></li>
+		<li><a onClick="quickView('/welfare/orderSearch');" class="btnOrdNdeli">주문배송</a></li>
+		<li><a onClick="quickView('/cart/cart');" class="btnMore">장바구니</a></li>
+	</ul>
+	<!-- 병헌 : 더보기 팝업 -->
+	<div id="popMoreMenu" class="popS2">
+		<ul class="moreArea">
+			<li><a class="btnPoint">포인트조회</a></li>
+			<li><a class="btnCostApply">비용신청</a></li>
+			<li><a class="btnCart">장바구니</a></li>
+			<li><a class="btnSearch" onClick="searchPopOpen('.pop_good_srch')">상품찾기</a></li>
+			<li><a class="btnScrabList">찜목록</a></li>
+			<li><a class="btnRecentGood">최근본상품</a></li>
+			<li><a class="btnDiagReservation">검진예약</a></li>
+			<li><a class="btnQna">1:1문의</a></li>
+		</ul>
+		<div class="setArea"><a class="btnSet">설정</a></div>
+	</div><!-- /popMoreMenu -->
+	<!-- /병헌 : 더보기 팝업 -->
+	<!-- 검색 -->
