--- a/test2.html
+++ b/test2.html
@@ -72,13 +72,6 @@ ga('send', 'pageview');
 	</div>
 </div>
 <script>
-/* $(document).ready(function() {
-	var cWidth = document.documentElement.clientWidth;
-	var cHeight = document.documentElement.clientHeight;
-	
-	$(".iframe").css({"width":cWidth, "height":cHeight});
-	$(".iframe iframe").css({"width":cWidth, "height":cHeight});
-}); */
 var child = window.frames[0];
 if(child){
 	var locationTo = etbs.param.getParam('lc');
@@ -99,11 +92,6 @@ function childOnloadHandler(childWindow){
 	} catch (e) {
 		console.warn('cross origin. cannot access child location');
 	}
-//		if(childWindow.location.host.indexOf('benecafe') > 1){
-//			$('#wrap').removeClass('partner');
-//		}else{
-//			$('#wrap').addClass('partner');
-//		}
 }
 function hold(){ // TODO delete this test code
 	console.warn('이 함수는 사이트오픈 때 삭제될 예정입니다. 소스에서 호출하는 경우가 없도록 주의하세요.');
@@ -129,21 +117,6 @@ function quickView(url){
 		<li><a onClick="quickView('/welfare/orderSearch');" class="btnOrdNdeli">주문배송</a></li>
 		<li><a onClick="quickView('/cart/cart');" class="btnMore">장바구니</a></li>
 	</ul>
-	<!-- 병헌 : 더보기 팝업 -->
-	<div id="popMoreMenu" class="popS2">
-		<ul class="moreArea">
-			<li><a class="btnPoint">포인트조회</a></li>
-			<li><a class="btnCostApply">비용신청</a></li>
-			<li><a class="btnCart">장바구니</a></li>
-			<li><a class="btnSearch" onClick="searchPopOpen('.pop_good_srch')">상품찾기</a></li>
-			<li><a class="btnScrabList">찜목록</a></li>
-			<li><a class="btnRecentGood">최근본상품</a></li>
-			<li><a class="btnDiagReservation">검진예약</a></li>
-			<li><a class="btnQna">1:1문의</a></li>
-		</ul>
-		<div class="setArea"><a class="btnSet">설정</a></div>
-	</div><!-- /popMoreMenu -->
-	<!-- /병헌 : 더보기 팝업 -->
 	<!-- 검색 -->
 	<!DOCTYPE html>
 <html lang="ko">
@@ -225,6 +198,61 @@ $(document).ready(function(){
 });
 </script>
 <body>
+<!-- 병헌 170329 추가 : 하단 상품찾기 팝업 -->
+<div class="darken pop_good_srch">
+	<div class="popS1">
+
+		<div class="popS1Header">
+			<h1 class="popS1HeaderTit">상품찾기</h1>
+			<a onClick="closePop('.pop_good_srch')" class="btnClose">닫기</a>
+		</div><!-- /popS1Header -->
+
+		<div class="popS1Wrap">
+			<form id="searchtop" name="searchtop" method="post" onsubmit="return false;">
+			<div class="row box_t3_2 box_s6 clearfix h_grid2_bord">
+				<div class="col-xs-10"><input class="w_t1 inpu_good_srch" type="text" id="query" name="query" placeholder="검색어 입력" onKeypress="javascript:pressCheckTop((event),this);" autocomplete="off"/></div>
+				<div class="col-xs-2"><a class="w_t1 btn7_4 btnS6_2 btn_good_srch"  onClick="doTopSearch();">검색</a></div>
+			</div><!-- /row -->
+			</form>
+			<!-- 병헌 170329 추가 : 검색 인풋 터치 시 추천 검색어 리스트 -->
+			<!-- 병헌 170331 수정 : 항목 추가 -->
+			<div id="ark"></div>
+			
+			<!-- /병헌 170331 수정 : 항목 추가 -->
+			<!-- /병헌 170329 추가 : 검색 인풋 터치 시 추천 검색어 리스트 -->
+			
+			<script>
+				$(document).on('focus','.inpu_good_srch',function(){
+					$('.pop_list_reco').slideDown();
+				});
+				$(document).on('click','.pop_list_reco td', function(){
+					$('.pop_list_reco').slideUp();
+				});
+				$(document).on('click', '.btn_good_srch', function(){
+					$('.pop_list_reco').slideUp();
+				});
+			</script>
+			
+			<div class="mt23 margin_both_2">
+				<table class="tbS5">
+					<thead>
+						<tr>
+							<th class="taL">나의 검색어</th>
+						</tr>
+					</thead>
+					<tbody id="mykeyword">																
+					</tbody>
+				</table>
+				<div class="taR mt10"><a href="javascript:void(0)" onclick="removeMyKeywordAll();" class="btn3_2 btnS6_2">검색기록삭제</a></div>
+			</div>
+			<h2 class="txt2_4 margin_both_2 mt23">MD 추천 상품</h2>
+					<div class="mdRecom mt10">
+						<ul class="mdRecomUl">
+							</ul>
+					</div><!-- /mdRecom -->
+				</div><!-- /popS1Wrap -->
+	</div><!-- /popS1 -->
+</div><!-- /darken -->
 <!-- /병헌 170329 추가 : 하단 상품찾기 팝업 -->
 <form id="mainForm" name="mainForm">
 	<input type="text" id="prodNo" name="prodNo" />
@@ -244,38 +272,7 @@ function openWishlistPopup(prodNo){
 	openPop('#pop_scrab');
 }
 </script>
-<!-- 병헌 : 찜하기 누르면나오는 팝업 -->
-<div id="pop_scrab" class="darken">
-	<div class="popS3">
-		<div class="popS1Header">
-			<h1 class="popS1HeaderTit">찜</h1>
-			<a onclick="closePop('#pop_scrab')" class="btnClose">닫기</a>
-		</div><!-- /popS1Header -->
-		<div class="popS3Wrap">
-			<p><strong class="txt2_4">현재 보고 있는 상품을 찜목록에 저장하시겠습니까?<br>찜 목록에 등록된 상품은 1년간 보관됩니다.</strong></p>
-			<p class="txt2_4 c1 mt10" id="wishPeriod"></p>
 
-			<div class="popS_footer mt23">
-				<a onclick="closePop('#pop_scrab')" class="btn1_5 btnS6_2">취소</a> 
-				<a onclick="insertWishlist && insertWishlist()" class="btn1_5 btnS5">확인</a>
-				<script>
-				/**
-				 * 찜목록 등록
-				 * @return void
-				 */
-				function insertWishlist(){ // popWish.jsp에서 호출됨
-					var params = 'prodNo=' + $('#prodNo').val();
-					$.post('/product/insertWishlist', params, function(data) {
-						closePop('#pop_scrab')
-					});
-				}
-				</script>
-			</div>
-
-		</div><!-- /popS1Wrap -->
-	</div><!-- /popS1 -->
-</div><!-- /darken -->
-<!-- /병헌 : 찜하기 누르면나오는 팝업 --><!-- 찜안내 팝업 -->	
 </body>
 </html>
 <!-- //검색 -->
