--- a/test2.html
+++ b/test2.html
@@ -68,7 +68,7 @@ ga('send', 'pageview');
 <body>
 <div class="iframe_wrap">
 	<div class="iframe">
-		<iframe src="/main/mainChild" id="main_frame" frameborder="0" onload="childOnloadHandler(this.contentWindow)"></iframe>
+		<iframe src="http://ftest.benecafe.co.kr/main/mainChild" id="main_frame" frameborder="0" onload="childOnloadHandler(this.contentWindow)"></iframe>
 	</div>
 </div>
 <script>
