--- a/test2.html
+++ b/test2.html
@@ -40,7 +40,7 @@ var appId = '';
 <script src="/static/mobile/js/lib/jquery.min.js"></script>
 <script src="/static/both/js/module/etbs.component.js"></script>
 <script src="/static/mobile/js/module/etbs.parent.common.js"></script>
-<script src="/static/mobile/js/module/common_pb_parent.js"></script>  
+<script src="/static/mobile/js/module/common_pb_parent.js"></script>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -68,7 +68,7 @@ ga('send', 'pageview');
 <body>
 <div class="iframe_wrap">
 	<div class="iframe">
-		<iframe src="http://ftest.benecafe.co.kr/main/mainChild" id="main_frame" frameborder="0" onload="childOnloadHandler(this.contentWindow)"></iframe>
+		<iframe src="http://ftest.benecafe.co.kr/main/mainChild"></iframe>
 	</div>
 </div>
 <script>
