--- a/test2.html
+++ b/test2.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1.0, user-scalable=no" />
 <meta name="format-detection" content="telephone=no" />
-<meta name="og:title" content="복리후생관 - e제너두" />  
+<meta name="og:title" content="복리후생관 - e제너두" />
 <meta name="og:description" content="복리후생관 - e제너두" />
 <link rel="icon" href="/static/mobile/images/favicon.ico">
 <link href="/static/mobile/css/common.css" rel="stylesheet">
@@ -68,7 +68,7 @@ ga('send', 'pageview');
 <body>
 <div class="iframe_wrap">
 	<div class="iframe">
-		<iframe src="http://ftest.benecafe.co.kr/main/mainChild"></iframe>
+		<iframe src="https://m.naver.com/"></iframe>
 	</div>
 </div>
 <script>
