--- a/test2.html
+++ b/test2.html
@@ -117,6 +117,7 @@ function quickView(url){
 		<li><a onClick="quickView('/welfare/orderSearch');" class="btnOrdNdeli">주문배송</a></li>
 		<li><a onClick="quickView('/cart/cart');" class="btnMore">장바구니</a></li>
 	</ul>
+</div>
 	<!-- 검색 -->
 	<!DOCTYPE html>
 <html lang="ko">
