--- a/test2.html
+++ b/test2.html
@@ -68,7 +68,7 @@ ga('send', 'pageview');
 <body>
 <div class="iframe_wrap">
 	<div class="iframe">
-		<iframe src="https://m.naver.com/"></iframe>
+		<iframe src="test.html"></iframe>
 	</div>
 </div>
 <script>
