--- a/test.html
+++ b/test.html
@@ -46,6 +46,8 @@
 	<input type="text" /><br />
 	<input type="text" /><br />
 	<input type="text" /><br />
-	<input type="text" /><br />
+	<input type="text" /><br /><br /><br /><br /><br />
+	<input type="password" /><br />
+	
 </body>
 </html>
