--- a/testdd.html
+++ b/testdd.html
@@ -54,7 +54,7 @@ button::-moz-focus-inner{padding:0;border:0}
 .content .conList li{width:360px}
 
 /* FOOTER */
-#bottom{position:fixed;left:0;bottom:0;width:100%;height:50px;z-index:99;background:#1a1a1a;}
+#bottom{position:fixed;left:0;bottom:-20px;width:100%;height:50px;z-index:99;background:#1a1a1a;}
 #bottom .btm_back{display:block;float:left;width:49px;height:50px;margin-left:6px;background:url(../images/sp_bottom.png) no-repeat -6px 0;background-size:360px 100px;text-indent:-9999em}
 #bottom .btm_back:active{background:url(../images/sp_bottom.png) no-repeat -6px -50px;background-size:360px 100px}
 #bottom .btm_home{display:block;float:left;width:49px;height:50px;background:url(../images/sp_bottom.png) no-repeat -55px 0;background-size:360px 100px;text-indent:-9999em}
