--- a/123.html
+++ b/123.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ko">
 <head>
+<base href="http://vipm.shinsegae.com" />
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no, address=no, email=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
