--- a/test_20171026.html
+++ b/test_20171026.html
@@ -2005,7 +2005,7 @@ function reqEventPopNew(chkUpd, id){
 	if (width == 320){
 		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=0.88,user-scalable=no');
 	}else{
-		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no');
+		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=10.0,minimum-scale=10.0,maximum-scale=10.0');
 	}
 
 	rtnChkUpd = chkUpd;
