--- a/test_20171026.html
+++ b/test_20171026.html
@@ -1814,7 +1814,13 @@ var settings = {
 };
 
 function hideStep1() {
-
+	// 뷰포트 초기화 - 확대 가능 (171026 수정)
+	var width = window.screen.width;
+	if (width == 320){
+		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=4.0,user-scalable=yes');
+	}else{
+		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=4.0,user-scalable=yes');
+	}
 
 	setVisiblity('dim', false);
 	setVisiblity('step1ReqPop', false);
@@ -1994,13 +2000,15 @@ function isNoReqUse(bene_cd, bene_creat_seq){
 /*********************************************************************이벤트 신청 프로세스 변경 START*************************************************************************/
 // 이벤트 신청 팝업
 function reqEventPopNew(chkUpd, id){
-	alert("77")
-	
-	
-setTimeout(function() {
-$("#target").focus();
-$("#target").val("z");
-}, 1000); 
+	alert("11111")
+	// 뷰포트 초기화 - 확대 불가 (171026 수정)
+	var width = window.screen.width;
+	if (width == 320){
+		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=0.88,user-scalable=no');
+	}else{
+		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes');
+	}
+
 
 	rtnChkUpd = chkUpd;
 	if (rtnChkUpd == true) {
@@ -3889,7 +3897,6 @@ function stepAddressSetValues(juso, post_no){
 						<span class="sub">기타</span>
 					</p>
 					<!-- 모든 혜택에서 나타냄 -->
-					<input type="text" id="target" />
 					<h2 class="ttl">[10월] 프라이빗이벤트 세일리지 전환 이벤트 (3회차)</h2>
 					<!-- 프라이빗이벤트 인 경우 평가를 나타냄 -->
 					<div class="star_score">
@@ -4062,13 +4069,12 @@ function stepAddressSetValues(juso, post_no){
 				<h1 class="blind">옵션 선택 팝업</h1>
 			</div>
 			<div id="ly_ctnr">
-
 				<div class="op_bx">
 					<p class="msg"><span id="txt_remain_cnt_pt"></span></p>
 					<div class="cdt_bx">
 						<div class="cdt">
 							<!-- [D] : op_lst에서 선택된 내용이 op_lb 값으로 들어옴 -->
-							
+							<input type="text" id="target" />
 							<a href="javascript:void(0)" id="selItemGroup" class="op_lb">선택</a>
 							<div id="divItemGroup" class="op_lst">
 								<ul>
