--- a/test_20171026.html
+++ b/test_20171026.html
@@ -2000,16 +2000,12 @@ function isNoReqUse(bene_cd, bene_creat_seq){
 /*********************************************************************이벤트 신청 프로세스 변경 START*************************************************************************/
 // 이벤트 신청 팝업
 function reqEventPopNew(chkUpd, id){
-	alert("11111")
-	// 뷰포트 초기화 - 확대 불가 (171026 수정)
-	var width = window.screen.width;
-	if (width == 320){
-		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=0.88,user-scalable=no');
-	}else{
-		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes');
-	}
-
-
+	alert("1`")
+	
+setTimeout(function() {
+	$("#target").focus();
+	$("#target").val("33")
+}, 1000);
 	rtnChkUpd = chkUpd;
 	if (rtnChkUpd == true) {
 		idx = id;
