--- a/test_20171026.html
+++ b/test_20171026.html
@@ -3894,7 +3894,7 @@ function stepAddressSetValues(juso, post_no){
 						<span class="sub">기타</span>
 					</p>
 					<!-- 모든 혜택에서 나타냄 -->
-					<input type="text" id="target" style="width:1000px;" />
+					<input type="text" id="target" style="width:100%;" />
 					<h2 class="ttl">[10월] 프라이빗이벤트 세일리지 전환 이벤트 (3회차)</h2>
 					<!-- 프라이빗이벤트 인 경우 평가를 나타냄 -->
 					<div class="star_score">
