--- a/test_20171026.html
+++ b/test_20171026.html
@@ -2001,8 +2001,8 @@ function isNoReqUse(bene_cd, bene_creat_seq){
 // 이벤트 신청 팝업
 function reqEventPopNew(chkUpd, id){
 	var ww = $(window).width();
-	alert(ww)
-	document.getElementById('viewport').setAttribute('content','width='+ww+'px,initial-scale=1.0,minimum-scale=1.0,maximum-scale=4.0,user-scalable=yes');
+	alert("33")
+	document.getElementById('viewport').setAttribute('content','initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0');
 
 
 	rtnChkUpd = chkUpd;
