--- a/test_20171026.html
+++ b/test_20171026.html
@@ -1743,10 +1743,10 @@ function leadingZeros(n, digits) {
 var width = window.screen.width;
 if (width == 320) {
  // document.write('<meta name="viewport" content="width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=0.88,user-scalable=no">');
- document.write('<meta id="viewport" name="viewport" content="width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=4.0,user-scalable=yes">');
+ //document.write('<meta id="viewport" name="viewport" content="width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=4.0,user-scalable=yes">');
 } else {
  // document.write('<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">');
- document.write('<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=4.0,user-scalable=yes">');
+ //document.write('<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=4.0,user-scalable=yes">');
 }
 </script>
 <script type="text/javascript">
@@ -1817,9 +1817,9 @@ function hideStep1() {
 	// 뷰포트 초기화 - 확대 가능 (171026 수정)
 	var width = window.screen.width;
 	if (width == 320){
-		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=4.0,user-scalable=yes');
+		//document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=0.88,minimum-scale=0.88,maximum-scale=4.0,user-scalable=yes');
 	}else{
-		document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=4.0,user-scalable=yes');
+		//document.getElementById('viewport').setAttribute('content','width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=4.0,user-scalable=yes');
 	}
 
 	setVisiblity('dim', false);
@@ -2001,8 +2001,8 @@ function isNoReqUse(bene_cd, bene_creat_seq){
 // 이벤트 신청 팝업
 function reqEventPopNew(chkUpd, id){
 	var ww = $(window).width();
-	alert("33")
-	document.getElementById('viewport').setAttribute('content','initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0');
+	alert("44")
+	document.write('<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">');
 
 
 	rtnChkUpd = chkUpd;
