--- a/test_20171027.html
+++ b/test_20171027.html
@@ -8,14 +8,16 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$("#btn").on("click", function() {
-				$('#viewport').attr('content','width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0');
+				$('#viewport').attr('content','width=414px,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0');
 				var viewportSet = $('#viewport').attr('content');
 				alert(viewportSet)
+				$("#inputtest").focus();
 			});
 		});
 	</script>
 </head>
 <body>
 	<span id="btn">초기화</span>
+	<input type="text" id="inputtest"/>
 </body>
 </html>
