--- a/test_20171027.html
+++ b/test_20171027.html
@@ -12,7 +12,7 @@
 				var viewportSet = $('#viewport').attr('content');
 				alert(viewportSet)
 				setTimeout(function(e) {
-					$("#inputtest").trigger("click");
+					$("#inputtest").trigger("focus")
 				},1000)
 			});
 		});
