--- a/test_20171027.html
+++ b/test_20171027.html
@@ -19,7 +19,7 @@
 	</script>
 </head>
 <body>
-	<span id="btn">초기화</span>
+	<span id="btn">초기화1</span>
 	<input type="text" id="inputtest"/>
 </body>
 </html>
